...



      SizedBox(height: 20,),

      InkWell(
        key: Key("loginepos"),
        onTap: (){
          // if (_formKey.currentState!.validate()){
          Navigator.push(context, MaterialPageRoute(builder: (_)=>const ThirdScreen()));
          // }else{
          //   return null;
          // }
...
          child:Center(child:Text("Login ePOS",style: TextStyle(color: Colors.white,fontWeight: FontWeight.bold,fontSize: 20),) ,),
        ),
      ),
      SizedBox(height: 20,),

      InkWell(
        key: const Key("back to finlogin"),
        onTap: (){
          // if (_formKey.currentState!.validate()){
          Navigator.push(context, MaterialPageRoute(builder: (_)=>LoginScreen()));
          // }else{
          //   return null;
          // }
...
