...
                      ),
                    ),
                    SizedBox(
                      height: 30,
                    ),
                    InkWell(
                      key: const Key("epos login"),
                      onTap: () {
                        if (_formKey.currentState!.validate()) {
                          Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (_) => const ForthScreen()));
...
                      ),
                    ),
                    SizedBox(
                      height: 20,
                    ),
                    InkWell(
                      key: const Key("back2 fin home"),
                      onTap: () {
                        // if (_formKey.currentState!.validate()){
                        Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (_) => const WelcomeScreen()));
...
